bppackaging/src/objects/Part_Tax__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Taxes</relationshipLabel>
        <relationshipName>Part_Taxes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Item__c</fullName>
        <label>Sales Tax Item</label>
        <referenceTo>Sales_Tax_Item__c</referenceTo>
        <relationshipLabel>Part Taxes</relationshipLabel>
        <relationshipName>Part_Taxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Part Tax</label>
    <nameField>
        <displayFormat>PT-{0000000}</displayFormat>
        <label>Part Tax Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>